--- a/site/package.json
+++ b/site/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Salsa - Unity & Socket.IO Installation",
   "dependencies": {
-    "express": "^4.10.2",
+    "express": "4.10.2",
     "socket.io": "1.4.8"
   }
 }
